# tuxdroidserver

./: README.md
doc/: README
include/: TuxASR.h  TuxAttitune.h  TuxAudio.h  TuxCommands.h  TuxCompat.h  TuxConfig.h  TuxDownloader.h  TuxDriver.h  TuxDroid.h  TuxLang.h  TuxLogger.h  TuxMessages.h  TuxServer.h  TuxState.h  TuxStrings.h  TuxTime.h  TuxTypes.h  TuxUtils.h  TuxVersion.h
include/fmod/: fmod.h  fmod_dsp.h
linux/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  espeak
linux/espeak-data/: en_dict
linux/lang/: EN.txt  FR.txt
linux/udev/rules.d/: 45-tuxdroid.rules
src/: TuxASR.c  TuxAttitune.c  TuxAudio.c  TuxCommands.c  TuxConfig.c  TuxDownloader.c  TuxDriver.c  TuxDroid.c  TuxLang.c  TuxLogger.c  TuxServer.c  TuxState.c  TuxStrings.c  TuxTime.c  TuxUtils.c
test/: README  project.yml
test/src/: test_TuxStrings.c  test_TuxUtils.c
tools/: README  check-license.sh  compare_string_to_template.py  license_header.txt
tools/tests/: test_compare_string_to_template.py
win32/: Makefile.mingw  Makefile.win  TuxDroidServer.dev
win32/espeak-data/: af_dict  da_dict  de_dict  en_dict  es_dict  et_dict  fr_dict  hu_dict  nl_dict  phondata  phonindex  phontab  ta_dict
win32/espeak-data/mbrola_ph/: af1_phtrans
win32/lib/: libFLAC_dynamic.lib  libcurld_imp.lib
